--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <!--css file-->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6873603205188241"
+     crossorigin="anonymous"></script>		
    <script src="https://kit.fontawesome.com/32b504d15d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
     <title>SPEEDWAY CYBER</title>
