--- a/index.html
+++ b/index.html
@@ -30,7 +30,18 @@
     <a href='telforms/telform.html'>Contact</a>
     <a href='about/about.html'>About</a>
 </nav>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6873603205188241"
+     crossorigin="anonymous"></script>
+<!-- Horizontal -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6873603205188241"
+     data-ad-slot="7685011024"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <section>
     <ion-icon name="search" class="search"></ion-icon>
     <input type="search"  id="searchId">
